--- a/views/application/page1.html
+++ b/views/application/page1.html
@@ -5,8 +5,10 @@
   <i ui-sref="apply.page1" class="fa fa-circle"></i>
   <i ui-sref="apply.page2" class="fa fa-circle-o"></i>
   <i ui-sref="apply.page3" class="fa fa-circle-o"></i>
+  <i ui-sref="apply.page4" class="fa fa-circle-o"></i>
 </div>
 <article class="tall">
+  <h2 class="white">BASIC INFO <span class="small white">[Complete the sentence]</span></h2>
   I am
   <a ng-click="open('name')">{{application.name | application:'name'}}</a>,
   <div class="input text" ng-if="display.name">
@@ -96,9 +98,10 @@
       <li ng-repeat="e in application.errors">{{e}}</li>
     </ul>
     <br>
-    <a class="white large" ui-sref="apply.page1">Page 1</a> <span class="large">|</span>
-    <a class="white large" ui-sref="apply.page2">Page 2</a> <span class="large">|</span>
-    <a class="white large" ui-sref="apply.page3">Page 3</a>
+    <a class="white large" ui-sref="apply.page1">Basic Info</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page2">Additional Info</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page3">Agreements</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page4">Summary</a>
   </div>
   <button ui-sref="apply.page2"><span><i class="fa fa-arrow-right"></i></span> Next</button>
 </footer>
