--- a/views/application/page2.html
+++ b/views/application/page2.html
@@ -5,8 +5,10 @@
   <i ui-sref="apply.page1" class="fa fa-circle-o"></i>
   <i ui-sref="apply.page2" class="fa fa-circle"></i>
   <i ui-sref="apply.page3" class="fa fa-circle-o"></i>
+  <i ui-sref="apply.page4" class="fa fa-circle-o"></i>
 </div>
 <article class="short">
+  <h2 class="white">ADDITIONAL INFO</h2>
   <span class="small white">Dietary restrictions:</span>
   <a ng-click="open('dietary')" class="small">{{application.diet.selected | application:'dietary'}}</a>
   <div class="input checkbox" ng-if="display.dietary">
@@ -17,7 +19,7 @@
     <label>Dietary restrictions</label>
     <button ng-click="closeAll()"></button>
   </div>
-  <br><br>
+  <br>
   <span class="small white">Will you require travel reimbursement?</span>
   <a class="small" ng-click="open('travel')">{{application.travel | application:'travel'}}</a>
   <div class="input select" ng-if="display.travel">
@@ -28,15 +30,7 @@
     <label>Travel reimbursement?</label>
     <button ng-click="closeAll()"></button>
   </div>
-  <br><br>
-  <span ng-if="application.resume" class="small white"><i class="fa fa-check white"></i> Resume uploaded. Upload a new one to replace it (optional):</span>
-  <span class="small white" ng-if="!application.resume">Upload your resume (optional):</span>
-  <div id="resume-upload" class="dropzone">
-    <div class="dz-message">Drop files here or click to upload</div>
-  </div>
-  <input type="text" ng-model="application.resume" id="resume-filename" style="display:none;">
   <br>
-
   <span class="white small">GitHub/LinkedIn/Personal Website link (optional):</span>
   <a ng-click="open('link')" class="small">{{application.link | application:'link'}}</a>
   <div class="input text" ng-if="display.link">
@@ -45,6 +39,12 @@
     <button ng-click="closeAll()"></button>
   </div>
   <br><br>
+  <span ng-if="application.resume" class="small white"><i class="fa fa-check white"></i> Resume uploaded. Upload a new one to replace it (optional):</span>
+  <span class="small white" ng-if="!application.resume">Upload your resume (optional):</span>
+  <div id="resume-upload" class="dropzone">
+    <div class="dz-message">Drop files here or click to upload</div>
+  </div>
+  <input type="text" ng-model="application.resume" id="resume-filename" style="display:none;">
 </article>
 <footer>
   <div data-alert class="alert-box alert" ng-if="application.errors">
@@ -52,9 +52,10 @@
       <li ng-repeat="e in application.errors">{{e}}</li>
     </ul>
     <br>
-    <a class="white large" ui-sref="apply.page1">Page 1</a> <span class="large">|</span>
-    <a class="white large" ui-sref="apply.page2">Page 2</a> <span class="large">|</span>
-    <a class="white large" ui-sref="apply.page3">Page 3</a>
+    <a class="white large" ui-sref="apply.page1">Basic Info</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page2">Additional Info</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page3">Agreements</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page4">Summary</a>
   </div>
   <button ui-sref="apply.page3"><span><i class="fa fa-arrow-right"></i></span> Next</button>
 </footer>
