--- a/views/home.html
+++ b/views/home.html
@@ -51,7 +51,9 @@
     <div class="row">
       <div class="small-12 columns" ng-if="!home.showLogin">
         <h2>Sign Up</h2>
-        <a ng-click="home.showLogin = true" class="switch">Already created an account?</a>
+        <div class="switch">
+          <a ng-click="home.showLogin = true" class="white">Already created an account?</a>
+        </div>
         <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
         <form ng-submit="home.person.register()">
           <label>
@@ -67,7 +69,10 @@
       </div>
       <div class="small-12 columns" ng-if="home.showLogin">
         <h2>Login</h2>
-        <a ng-click="home.showLogin = false" class="switch">Create an account</a>
+        <div class="switch">
+          <a ng-click="home.showLogin = false" class="white">Create an account</a> |
+          <a ui-sref="recover" class="white">Forgot your password?</a>
+        </div>
         <div class="white small" ng-repeat="e in home.person.errors">{{e}}</div>
         <form ng-submit="home.person.login()">
           <label>
