--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,8 @@
 
   <div class="row" id="updates">
     <div class="small-12 large-4 large-offset-4 columns">
-      <p class="align-center">Get updates about KHE:</p>
+      <!-- Pre-register -->
+      <!--<p class="align-center">Get updates about KHE:</p>
       <p class="align-center" ng-repeat="message in home.mail.successes">{{message}}</p>
       <p class="align-center" ng-repeat="message in home.mail.errors">{{message}}</p>
       <form ng-if="!home.mail.successes" ng-submit="home.mail.add()">
@@ -36,10 +37,11 @@
             <button href="#" class="button postfix">Go</button>
           </div>
         </div>
-      </form>
-      <button ng-if="home.mail.email == 'supersecret' && !home.user" class="apply" ng-click="home.loginRegister = true">Apply</button>
-      <button ng-if="home.mail.email == 'supersecret' && home.user" class="apply" ui-sref="apply.page1">Your Application</button>
-      <div ng-if="home.mail.email == 'supersecret' && home.user" class="align-center">
+      </form>-->
+      <!-- /Pre-register -->
+      <button ng-if="!home.user" class="apply" ng-click="home.loginRegister = true">Apply</button>
+      <button ng-if="home.user" class="apply" ui-sref="apply.page1">Your Application</button>
+      <div ng-if="home.user" class="align-center">
         <a href="/account" class="white">Change Email/Password</a> |
         <a ng-click="home.person.logout()" class="white">Logout</a>
       </div>
