--- a/views/application/page1.html
+++ b/views/application/page1.html
@@ -29,8 +29,10 @@
   </div>
   student at
   <a ng-click="open('school')">{{application.school | application:'school'}}</a>
-  <div class="input text" ng-if="display.school">
-    <input type="text" placeholder="State University" ng-model="application.school">
+  <div class="input select" ng-if="display.school">
+    <select>
+      <school-options></school-options>
+    </select>
     <label>Your school</label>
     <button ng-click="closeAll()"></button>
   </div>
