--- a/views/home.html
+++ b/views/home.html
@@ -129,7 +129,7 @@
   </div>
 </div>
 
-<div class="light-section">
+<div class="light-section sponsors">
   <div class="row">
     <div class="small-12 columns">
       <div class="row">
@@ -145,6 +145,30 @@
             <a target="_blank" href="/SponsorshipPacket.pdf">sponsorship packet</a>
             and <a href="mailto:staff@khe.io">contact us</a> (staff@khe.io).
           </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 columns">
+          <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
+        </div>
+        <div class="small-6 columns">
+          <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.png" /> </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-4 columns">
+          <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
+        </div>
+        <div class="small-4 columns">
+          <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
+        </div>
+        <div class="small-4 columns">
+          <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
         </div>
       </div>
     </div>
