--- a/css/app.css
+++ b/css/app.css
@@ -341,6 +341,18 @@ button.apply {
   visibility: hidden;
 }
 
+.sponsors img{
+  margin:auto;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.sponsors img:hover{
+  margin:auto;
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+
 footer#site-footer {
   text-align: center;
   background-color: #FAFAFA;
