--- a/views/application/page4.html
+++ b/views/application/page4.html
@@ -99,7 +99,7 @@
   </div>
 
   <div class="input text" ng-if="display.school">
-    <input type="text" placeholder="State University" ng-model="application.school" list="schools">
+    <input type="text" placeholder="State University" ng-model="application.school" list="school-datalist">
     <school-datalist></school-datalist>
     <label>Your school</label>
     <button ng-click="closeAll()"></button>
