Add grad student to review page

--- a/views/application/page4.html
+++ b/views/application/page4.html
@@ -141,6 +141,7 @@
       <option value="Junior">Junior</option>
       <option value="Senior">Senior</option>
       <option value="High School">High Schooler</option>
+      <option value="Graduate Student">Graduate Student</option>
     </select>
     <label>Your year in school</label>
     <button ng-click="closeAll()"></button>
