--- a/views/home.html
+++ b/views/home.html
@@ -129,7 +129,7 @@
   </div>
 </div>
 
-<div class="light-section sponsors">
+<div class="light-section" id="sponsors">
   <div class="row">
     <div class="small-12 columns">
       <div class="row">
@@ -148,16 +148,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="small-12 columns">
+        <div class="small-4 columns">
           <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
         </div>
-      </div>
-      <div class="row">
-        <div class="small-6 columns">
+        <div class="small-4 columns">
           <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
         </div>
-        <div class="small-6 columns">
-          <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.png" /> </a>
+        <div class="small-4 columns">
+          <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
         </div>
       </div>
       <div class="row">
@@ -169,6 +167,11 @@
         </div>
         <div class="small-4 columns">
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-4 columns">
+          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/techstylelab.png" height="50%" /> </a>
         </div>
       </div>
     </div>
