--- a/views/home.html
+++ b/views/home.html
@@ -169,6 +169,11 @@
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
         </div>
       </div>
+      <div class="row">
+        <div class="small-4 columns">
+          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" height="50%" /> </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
