--- a/views/home.html
+++ b/views/home.html
@@ -171,7 +171,7 @@
       </div>
       <div class="row">
         <div class="small-4 columns">
-          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/techstylelab.png" height="50%" /> </a>
+          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" height="50%" /> </a>
         </div>
       </div>
     </div>
