--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
 
   <parallax-background></parallax-background>
 
-  <a id="mlh-trust-badge" style="position:fixed;top:0;right:50px;max-width:100px;width:10%;min-width: 60px;display:block;z-index:10000" href="https://mlh.io/?utm_campaign=Trust%20Badge" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/f2015.png" alt="MLH Official - Fall 2015" style="width:100%;" ></a>
+  <a id="mlh-trust-badge" style="position:absolute;top:2rem;right:50px;max-width:100px;width:10%;min-width: 60px;display:block;z-index:10000" href="https://mlh.io/?utm_campaign=Trust%20Badge" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/f2015.png" alt="MLH Official - Fall 2015" style="width:100%;" ></a>
 
   <div class="row" id="icons">
     <div class="small-12 columns align-center">
@@ -125,6 +125,21 @@
           </p>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="light-section">
+  <div class="row">
+    <div class="small-12 columns">
+      <h2>UPDATES <a class="small grey" ng-if="!home.msg.enabled()" ng-click="home.msg.enable()">Enable desktop notifications</a></h2>
+    </div>
+  </div>
+  <div class="row" ng-repeat="message in home.msg.messages | orderBy:'created':true">
+    <div class="small-12 columns">
+      <span ng-bind-html="message.text|markdown|unsafe"></span>
+      <span>{{message.created | relativeDate}}</span>
+      <br><br><br>
     </div>
   </div>
 </div>
