--- a/css/app.css
+++ b/css/app.css
@@ -363,13 +363,16 @@ ul.messages {
   margin-left: 0;
   background: white;
   border: 1px solid #E8E8E8;
-  border-radius: 5px;
 }
 
 li.message {
   padding: 1rem;
   display: block;
   border-bottom: 1px solid #e8e8e8;
+}
+
+#social-media i:hover {
+  color: #757575;
 }
 
 footer#site-footer {
