--- a/views/home.html
+++ b/views/home.html
@@ -174,7 +174,7 @@
   </div>
 </div>
 
-<div class="light-section" id="sponsors">
+<div class="light-section" style="background-color:white;" id="sponsors">
   <div class="row">
     <div class="small-12 columns">
       <div class="row">
