--- a/css/app.css
+++ b/css/app.css
@@ -133,8 +133,19 @@ fieldset legend {
 
 #splash {
   padding-top: 3rem;
-  padding-bottom: 6rem;
+  padding-bottom: 4rem;
   margin-top: -32px;
+}
+
+nav a {
+  font-family: 'Oswald';
+  color: white;
+  padding: 1rem;
+  text-decoration: underline;
+}
+
+#splash nav a:hover {
+  color: #F5F5F5;
 }
 
 #layer1, #layer2 {
@@ -455,4 +466,25 @@ footer#site-footer .container {
   #mlh-trust-badge {
     visibility: visible;
   }
+}
+
+.dark-page {
+  width: 100vw;
+  height: 100vh;
+  overflow: scroll;
+  background-color: #1C1C1C;
+}
+
+.dark-page header {
+  background: rgba(0, 0, 0, 0.3);
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1rem;
+  height: 4.5rem;
+  margin-bottom: 2rem;
+}
+
+.dark-page header h1 {
+  color: white;
+  font-size: 1.5rem;
 }
