--- a/views/schedule.html
+++ b/views/schedule.html
@@ -7,16 +7,21 @@
     </div>
   </header>
 
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <div class="white" ng-repeat="event in schedule.events.all">{{event.title}}</div>
-    </div>
-    <div class="small-12 medium-4 columns">
-      <div class="white" ng-repeat="event in schedule.events.all">{{event.title}}</div>
-    </div>
-    <div class="small-12 medium-4 columns">
-      <div class="white" ng-repeat="event in schedule.events.all">{{event.title}}</div>
-    </div>
+
+  <div ng-repeat="(day, events) in schedule.events.days" class="row schedule align-center">
+    <h2 class="white">{{day}}</h2>
+    <table class="small-12 columns">
+      <tr ng-repeat="event in events | orderBy:'start':false">
+        <td class="align-right" width="200">
+          <span class="white">{{event.start|timeOfDay}} - {{event.end|timeOfDay}}</span><br>
+          <span class="white">{{event.location}}</span>
+        </td>
+        <td class="align-left right-col" width="200">
+          <h4 class="white">{{event.title}}</h4>
+          <span class="white">{{event.description}}</span>
+        </td>
+      </tr>
+    </table>
   </div>
 
 </div>
