--- a/css/app.css
+++ b/css/app.css
@@ -348,14 +348,19 @@ button.apply {
 #sponsors img {
   margin:auto;
   height: 75%;
-  width: 75%;
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
   filter: grayscale(100%);
   margin-top: 2em;
 }
 
 #sponsors img:hover {
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
   -webkit-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
   filter: grayscale(0%);
 }
 
