Add Formfire logo, fix grid centering

--- a/views/home.html
+++ b/views/home.html
@@ -193,30 +193,33 @@
         </div>
       </div>
       <div class="row">
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
         </div>
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="https://www.americangreetings.com/"> <img src="/img/sponsors/americangreetings.png" /> </a>
         </div>
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
         </div>
       </div>
       <div class="row">
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
         </div>
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
         </div>
-        <div class="small-4 columns">
+        <div class="small-4 columns text-center">
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
         </div>
       </div>
       <div class="row">
-        <div class="small-4 columns">
-          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" height="50%" /> </a>
+        <div class="small-4 columns text-center">
+          <a href="www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
+        </div>
+        <div class="small-4 columns text-center end">
+          <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
         </div>
       </div>
     </div>
