Begin laying out live feed

--- a/css/app.css
+++ b/css/app.css
@@ -119,6 +119,11 @@ a.white:hover {
   transform: translateY(-50%);
 }
 
+.row.full-width {
+  width: 95%;
+  max-width: 95%;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
