--- a/views/live.html
+++ b/views/live.html
@@ -1,1 +1,61 @@
-Live page
+<div class="dark-page">
+  <header>
+    <div class="row">
+      <div class="small-12 columns">
+        <h1><a href="/">KHE</a> LIVE</h1>
+      </div>
+    </div>
+  </header>
+
+  <div class="row full-width">
+    <div class="small-12 medium-4 large-3 columns">
+      <!-- Schedule -->
+    </div>
+    <div class="small-12 medium-8 large-9 columns">
+      <div class="row">
+        <div class="small-12 columns">
+          <!-- Updates -->
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 medium-6 columns">
+          <!-- Twitter -->
+          <h3 class="white">TWITTER</h3>
+          <a class="twitter-timeline"
+            data-dnt="true"
+            href="https://twitter.com/KentHackEnough"
+            data-widget-id="624615979952148480"
+            data-chrome="noheader nofooter noscrollbar"
+            data-tweet-limit="4">Tweets by @KentHackEnough</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+        <div class="small-12 medium-6 columns">
+          <!-- Instagram -->
+          <h3 class="white">INSTAGRAM</h3>
+          <instagram></instagram>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--
+  <div ng-repeat="(day, events) in live.events.days" class="row schedule align-center">
+    <div class="small-12 columns">
+      <h2 class="white underline">{{day}}</h2>
+    </div>
+    <table class="small-12 columns">
+      <tr ng-repeat="event in events | orderBy:'start':false">
+        <td class="align-right left-col" width="200">
+          <span class="white strong">{{event.start|timeOfDay}} - {{event.end|timeOfDay}}</span><br>
+          <span class="white">{{event.location}}</span>
+        </td>
+        <td class="align-left right-col" width="200">
+          <h4 class="white">{{event.title}}</h4>
+          <span class="white">{{event.description}}</span>
+        </td>
+      </tr>
+    </table>
+  </div>
+  -->
+
+</div>
