--- a/views/live.html
+++ b/views/live.html
@@ -12,9 +12,23 @@
       <!-- Schedule -->
     </div>
     <div class="small-12 medium-8 large-9 columns">
-      <div class="row">
+      <div ng-if="live.msg.messages.length" class="row">
         <div class="small-12 columns">
           <!-- Updates -->
+          <h3 class="white">
+            UPDATES
+            <span ng-if="!live.msg.enabled()" class="small">
+              <a class="small" ng-click="live.msg.enable()">Enable desktop notifications</a> |
+            </span>
+            <a class="small" ng-if="live.msg.showing == 'few'" ng-click="live.msg.showAll()">Show all</a>
+            <a class="small" ng-if="live.msg.showing == 'all'" ng-click="live.msg.showFew()">Show less</a>
+          </h3>
+          <ul class="messages">
+            <li class="message" ng-repeat="message in live.msg.messages | orderBy:'created':true">
+              <i class="fa fa-envelope grey"></i> <span class="italic grey small">{{message.created | relativeDate}}</span>
+              <span ng-bind-html="message.text|markdown|unsafe"></span>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="row">
