--- a/views/live.html
+++ b/views/live.html
@@ -10,6 +10,24 @@
   <div class="row full-width">
     <div class="small-12 medium-4 large-3 columns">
       <!-- Schedule -->
+      <h3 class="white">SCHEDULE</h3>
+      <div ng-repeat="(day, events) in live.events.days" class="row schedule align-center">
+        <div class="small-12 columns">
+          <h2 class="white underline">{{day}}</h2>
+        </div>
+        <table class="small-12 columns">
+          <tr ng-repeat="event in events | orderBy:'start':false">
+            <td class="align-right left-col" width="200">
+              <span class="white strong">{{event.start|timeOfDay}} - {{event.end|timeOfDay}}</span><br>
+              <span class="white">{{event.location}}</span>
+            </td>
+            <td class="align-left right-col" width="200">
+              <h4 class="white">{{event.title}}</h4>
+              <span class="white">{{event.description}}</span>
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class="small-12 medium-8 large-9 columns">
       <div ng-if="live.msg.messages.length" class="row">
