--- a/css/app.css
+++ b/css/app.css
@@ -506,3 +506,24 @@ footer#site-footer .container {
   color: white;
   font-size: 1.5rem;
 }
+
+.light-page {
+  width: 100vw;
+  height: 100vh;
+  overflow: scroll;
+  background-color: #FAFAFA;
+}
+
+.light-page header {
+  background: #F6F6F6;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1rem;
+  height: 4.5rem;
+  margin-bottom: 2rem;
+}
+
+.light-page header h1 {
+  color: black;
+  font-size: 1.5rem;
+}
