Add links to social media modules

--- a/views/live.html
+++ b/views/live.html
@@ -77,7 +77,10 @@
       <div class="row">
         <div class="small-12 medium-6 columns">
           <!-- Twitter -->
-          <h3>TWITTER</h3>
+          <h3>
+            TWITTER
+            <a class="small" href="https://twitter.com/@kenthackenough">@KentHackEnough</a>
+          </h3>
           <a class="twitter-timeline"
             data-dnt="true"
             href="https://twitter.com/KentHackEnough"
@@ -88,7 +91,10 @@
         </div>
         <div class="small-12 medium-6 columns">
           <!-- Instagram -->
-          <h3>INSTAGRAM</h3>
+          <h3>
+            INSTAGRAM
+            <a class="small" href="http://instagram.com/kenthackenough">@kenthackenough</a>
+          </h3>
           <instagram></instagram>
         </div>
       </div>
