Hide schedule and live buttons

--- a/views/home.html
+++ b/views/home.html
@@ -50,14 +50,15 @@
       </div>
     </div>
 
-    <div class="row">
+    <!-- Schedule and live pages -->
+    <!--<div class="row">
       <div class="small-12 columns align-center">
         <nav>
           <a ui-sref="live">GET UPDATES</a>
           <a ui-sref="schedule">VIEW THE SCHEDULE</a>
         </nav>
       </div>
-    </div>
+    </div>-->
   </div>
 
   <div class="blinds" ng-if="home.loginRegister && !home.user" ng-click="home.loginRegister = false"></div>
