--- a/css/app.css
+++ b/css/app.css
@@ -217,6 +217,7 @@ button.apply {
   font-family: 'Oswald';
   text-transform: uppercase;
   font-size: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 #login {
