--- a/views/live.html
+++ b/views/live.html
@@ -21,8 +21,8 @@
               <h5>HAPPENING NOW</h5>
               <div ng-repeat="event in live.events.happening">
                 <span class="small bold">{{event.title}}<br></span>
-                <span class="grey small">{{event.start | timeOfDay}} - {{event.end | timeOfDay}}<br></span>
-                <span class="grey small">{{event.location}} <br><br></span>
+                <span class="grey small">{{event.start | amDateFormat:'dddd h:mma'}} - {{event.end | amDateFormat:'h:mma'}}<br></span>
+                <span ng-if="event.location" class="grey small">{{event.location}}<br></span><br>
               </div>
             </div>
           </div>
@@ -31,8 +31,8 @@
               <h5>NEXT UP</h5>
               <div ng-repeat="event in live.events.upNext">
                 <span class="small bold">{{event.title}}<br></span>
-                <span class="grey small">{{event.start | timeOfDay}} - {{event.end | timeOfDay}}<br></span>
-                <span class="grey small">{{event.location}} <br><br></span>
+                <span class="grey small">{{event.start | amDateFormat:'dddd h:mma'}} - {{event.end | amDateFormat:'h:mma'}}<br></span>
+                <span ng-if="event.location" class="grey small">{{event.location}} <br></span><br>
               </div>
             </div>
           </div>
@@ -41,8 +41,8 @@
               <h5>LATER</h5>
               <div ng-repeat="event in live.events.later">
                 <span class="small bold">{{event.title}}<br></span>
-                <span class="grey small">{{event.start | timeOfDay}} - {{event.end | timeOfDay}}<br></span>
-                <span class="grey small">{{event.location}} <br><br></span>
+                <span class="grey small">{{event.start | amDateFormat:'dddd h:mma'}} - {{event.end | amDateFormat:'h:mma'}}<br></span>
+                <span ng-if="event.location" class="grey small">{{event.location}} <br></span><br>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
           <ul class="messages">
             <li class="message" ng-repeat="message in live.msg.messages | orderBy:'created':true">
               <span ng-bind-html="message.text|markdown|unsafe"></span>
-              <span class="italic grey small">{{message.created | relativeDate}}</span>
+              <span class="italic grey small" am-time-ago="message.created"></span>
             </li>
           </ul>
         </div>
