Update and fix sponsor logos

--- a/views/home.html
+++ b/views/home.html
@@ -177,12 +177,15 @@
           <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
-          <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
+          <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
         </div>
       </div>
       <div class="row">
         <div class="small-4 columns text-center">
-          <a href="www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
+          <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
+        </div>
+        <div class="small-4 columns text-center">
+          <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
         </div>
         <div class="small-4 columns text-center end">
           <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
