Add Explorys and Marcus Thomas

--- a/views/home.html
+++ b/views/home.html
@@ -171,22 +171,27 @@
       </div>
       <div class="row">
         <div class="small-4 columns text-center">
+          <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
+        </div>
+        <div class="small-4 columns text-center">
           <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
           <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
         </div>
+      </div>
+      <div class="row">
         <div class="small-4 columns text-center">
           <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
         </div>
-      </div>
-      <div class="row">
         <div class="small-4 columns text-center">
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
           <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
         </div>
+      </div>
+      <div class="row">
         <div class="small-4 columns text-center end">
           <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
         </div>
