--- a/views/home.html
+++ b/views/home.html
@@ -158,7 +158,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.progressive.com/"> <img src="/img/sponsors/progressive.png" /> </a>
         </div>
@@ -169,7 +169,7 @@
           <a href="http://www.mimsoftware.com/"> <img src="/img/sponsors/mim.svg" /> </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
         </div>
@@ -180,7 +180,7 @@
           <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
         </div>
@@ -191,7 +191,7 @@
           <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center end">
           <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
         </div>
