--- a/views/home.html
+++ b/views/home.html
@@ -174,24 +174,27 @@
           <a href="https://www.explorys.com/"><img src="/img/sponsors/explorys.png"></a>
         </div>
         <div class="small-4 columns text-center">
-          <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
+          <a href="https://www.onbase.com/"><img src="/img/sponsors/hyland.png"></a>
         </div>
         <div class="small-4 columns text-center">
-          <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
+          <a href="http://www.rosetta.com/"> <img src="/img/sponsors/rosetta.png" /> </a>
         </div>
       </div>
       <div class="row sponsor-row">
+        <div class="small-4 columns text-center">
+          <a href="http://rovisys.com/"> <img src="/img/sponsors/rovisys.png" /> </a>
+        </div>
         <div class="small-4 columns text-center">
           <a href="http://www.marcusthomasllc.com/"> <img src="/img/sponsors/marcusthomas.png" /> </a>
         </div>
         <div class="small-4 columns text-center">
           <a href="https://hurricanelabs.com/"> <img src="/img/sponsors/hurricane.png" /> </a>
         </div>
+      </div>
+      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="http://www.flashstarts.com/"> <img src="/img/sponsors/flashstarts.png" /> </a>
         </div>
-      </div>
-      <div class="row sponsor-row">
         <div class="small-4 columns text-center">
           <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
         </div>
