Add KDI, supporters section

--- a/views/home.html
+++ b/views/home.html
@@ -199,7 +199,24 @@
           <a href="https://www.formfire.com"> <img src="/img/sponsors/formfire.png" /> </a>
         </div>
         <div class="small-4 columns text-center end">
+          <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <h2>WITH SUPPORT FROM</h2>
+          <br>
+        </div>
+      </div>
+      <div class="row sponsor-row">
+        <div class="small-4 columns text-center">
           <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
+        </div>
+        <div class="small-4 columns text-center">
+          <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
+        </div>
+        <div class="small-4 columns text-center end">
+          <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png"/> </a>
         </div>
       </div>
     </div>
