--- a/views/home.html
+++ b/views/home.html
@@ -202,6 +202,11 @@
           <a href="http://www.myboogieboard.com/"> <img src="/img/sponsors/kdi.svg"/> </a>
         </div>
       </div>
+      <div class="row sponsor-row">
+        <div class="small-4 columns text-center">
+          <a href="http://www.oeconnection.com/"> <img src="/img/sponsors/OEC.png" /> </a>
+        </div>
+      </div>
       <div class="row">
         <div class="small-12 columns">
           <h2>WITH SUPPORT FROM</h2>
